[gd_scene load_steps=3 format=3 uid="uid://ddpyolov5fok0"]

[ext_resource type="Script" uid="uid://b8igl15wijdiu" path="res://tests/test_scenes/test_scene.gd" id="1_uhqqe"]
[ext_resource type="Resource" uid="uid://tnci7ph2ia3c" path="res://data/game_characters/allies/user_data/data/ud_chest.tres" id="2_ia1lp"]

[node name="TestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhqqe")
ud_ally = ExtResource("2_ia1lp")

[node name="SaveBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 281.0
offset_right = 523.0
offset_bottom = 365.0
theme_override_font_sizes/font_size = 55
text = "save"

[node name="LoadBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1037.0
offset_top = 284.0
offset_right = 1160.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 55
text = "load"

[node name="ChangeInternalBoolBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 342.0
offset_top = 452.0
offset_right = 681.0
offset_bottom = 602.0
theme_override_font_sizes/font_size = 55
text = "Change inertnal bool"

[node name="PrintInternalBoolBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1322.0
offset_top = 608.0
offset_right = 1506.0
offset_bottom = 788.0

[node name="EmitActionBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 345.0
offset_top = 656.0
offset_right = 940.0
offset_bottom = 801.0
theme_override_font_sizes/font_size = 55
text = "emit action"

[connection signal="pressed" from="SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="LoadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="ChangeInternalBoolBtn" to="." method="_on_change_internal_bool_btn_pressed"]
[connection signal="pressed" from="PrintInternalBoolBtn" to="." method="_on_print_internal_bool_btn_pressed"]
[connection signal="pressed" from="EmitActionBtn" to="." method="_on_emit_action_btn_pressed"]
